Merged in feature/PAT-418/platforms-fpsos-summary-diffing (pull request #204)
feature/PAT-418/implement platforms fpsos section summary diffing

* Implement platforms fpsos section summary diffing

* Add getPlatformsFpsosByProjectDetail/getPlatformsFpsosByProjectAndVersion tests which prove you get an empty list back when nothing is found
Verify diffService is not called in getSummary_noPlatformsFpsos test

Approved-by: Daniel Ashworth
Approved-by: Lewis McKeown